name:                conduit-iconv
version:             0.1.0.0
synopsis:            Conduit for character encoding conversion.
description:
    @conduit-iconv@ provides a "Data.Conduit#t:Conduit" for character encoding
    conversion, based on "Codec.Text.IConv".
homepage:            https://github.com/sdroege/conduit-iconv
license:             BSD3
license-file:        LICENSE
author:              Sebastian Dröge
maintainer:          slomo@coaxion.net
category:            Conduit, Text
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Codec.Text.IConv.Conduit
  build-depends:       base == 4.*
                     , conduit >=1.1 && <1.3
                     , bytestring >=0.10 && <0.11
                     , iconv >=0.4 && <0.5
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: git://github.com/sdroege/conduit-iconv.git

